InvalidLoginTest.java added

--- a/java_test_code/junit-browserstack-master/junit-5/browserstack.yml
+++ b/java_test_code/junit-browserstack-master/junit-5/browserstack.yml
@@ -10,9 +10,9 @@ platforms:
     osVersion: Monterey
     browserName: Safari
     browserVersion: 15.6
-  - deviceName: iPhone 13
+  - deviceName: iPhone 13 Pro
     osVersion: 15
-    browserName: Chromium
+    browserName: safari
     deviceOrientation: portrait
 parallelsPerPlatform: 1
 browserstackLocal: true
