--- a/java_test_code/junit-browserstack-master/junit-5/pom.xml
+++ b/java_test_code/junit-browserstack-master/junit-5/pom.xml
@@ -62,6 +62,11 @@
             <version>LATEST</version>
             <scope>compile</scope>
         </dependency>
+        <dependency>
+            <groupId>org.slf4j</groupId>
+            <artifactId>slf4j-simple</artifactId>
+            <version>2.0.9</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
