--- a/java_test_code/junit-browserstack-master/junit-5/browserstack.yml
+++ b/java_test_code/junit-browserstack-master/junit-5/browserstack.yml
@@ -2,18 +2,18 @@ userName: ${BROWSERSTACK_USERNAME}
 accessKey: ${BROWSERSTACK_ACCESS_KEY}
 framework: junit5
 platforms:
-  - os: Windows
-    osVersion: 10
-    browserName: Chrome
-    browserVersion: 120.0
-  - os: OS X
-    osVersion: Monterey
-    browserName: Safari
-    browserVersion: 15.6
-  - deviceName: iPhone 13 Pro
-    osVersion: 15
-    browserName: safari
-    deviceOrientation: portrait
+  # - os: Windows
+  #   osVersion: 10
+  #   browserName: Chrome
+  #   browserVersion: 120.0
+  # - os: OS X
+  #   osVersion: Monterey
+  #   browserName: Safari
+  #   browserVersion: 15.6
+  # - deviceName: iPhone 13 Pro
+  #   osVersion: 15
+  #   browserName: safari
+  #   deviceOrientation: portrait
 parallelsPerPlatform: 1
 browserstackLocal: true
 buildName: Kolkata_bugbash_build
